Separated script files implemented

--- a/DeviceCommunication/DeviceCommunication.csproj
+++ b/DeviceCommunication/DeviceCommunication.csproj
@@ -74,6 +74,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="app.config" />
+    <None Include="Enable Link LED_scripts.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -95,7 +98,10 @@
     <None Include="registers_adin1301.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="registers_scripts.json">
+    <None Include="Reset Auto-Negotiation_scripts.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="SftPd Down&amp;Up_scripts.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
