--- a/ADIN1100-Eval/ADIN1100-Eval.csproj
+++ b/ADIN1100-Eval/ADIN1100-Eval.csproj
@@ -115,6 +115,7 @@
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="LocalLoopbackParameters.cs" />
+    <Compile Include="LoopbackItem.cs" />
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="RegisterParameters.cs" />
     <Compile Include="TestModeItem.cs" />
