--- a/ADIN1100-Eval/ADIN1100-Eval.csproj
+++ b/ADIN1100-Eval/ADIN1100-Eval.csproj
@@ -135,6 +135,9 @@
     <Compile Include="ViewModel\Commands\BindingCommand.cs" />
     <Compile Include="ViewModel\DeviceViewModel.cs" />
     <Compile Include="ViewModel\FeedbackViewModel.cs" />
+    <Compile Include="Views\CableDiagnosticImageControl.xaml.cs">
+      <DependentUpon>CableDiagnosticImageControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\CableDiagnosticsADIN1100.xaml.cs">
       <DependentUpon>CableDiagnosticsADIN1100.xaml</DependentUpon>
     </Compile>
@@ -165,7 +168,7 @@
     <Compile Include="Views\Loopback.xaml.cs">
       <DependentUpon>Loopback.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\MACAddress.xaml.cs">
+    <Compile Include="MACAddress.xaml.cs">
       <DependentUpon>MACAddress.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RegisterListView.xaml.cs">
@@ -198,6 +201,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Themes\CustomControlStyles\GridSplitterStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CableDiagnosticImageControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -241,7 +248,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\MACAddress.xaml">
+    <Page Include="MACAddress.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
