--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ADIN.Device</RootNamespace>
     <AssemblyName>ADIN.Device</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,13 +53,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ActiveLinkModel.cs" />
+    <Compile Include="Models\ADIN1100Model.cs" />
+    <Compile Include="Models\ADIN2111Model.cs" />
+    <Compile Include="Models\ADINDevice.cs" />
+    <Compile Include="Models\AutoNegAdvertisementBase.cs" />
     <Compile Include="Models\AutoNegMasterSlaveAdvertisementModel.cs" />
-    <Compile Include="Models\ADINDeviceModel.cs" />
     <Compile Include="Models\AutoNegTxLevelAdvertisementModel.cs" />
     <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\FaultDetectorModel.cs" />
     <Compile Include="Models\FrameContentModel.cs" />
     <Compile Include="Models\FrameGenCheckerModel.cs" />
+    <Compile Include="Models\IADINDevice.cs" />
+    <Compile Include="Models\AbstractADINFactory.cs" />
     <Compile Include="Models\LinkPropertyModel.cs" />
     <Compile Include="Models\LocalRangeModel.cs" />
     <Compile Include="Models\LoopbackListingModel.cs" />
@@ -71,7 +77,7 @@
     <Compile Include="Models\TestModeListingModel.cs" />
     <Compile Include="Models\TestModeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ADIN1100ConfirmBoard.cs" />
+    <Compile Include="Services\ADINConfirmBoard.cs" />
     <Compile Include="Services\ADIN1100FirmwareAPI.cs" />
     <Compile Include="Services\ADIN2111FirmwareAPI.cs" />
     <Compile Include="Services\IFirmwareAPI.cs" />
