--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Models\ActiveLinkModel.cs" />
     <Compile Include="Models\ADIN1100Model.cs" />
+    <Compile Include="Models\ADIN1300Model.cs" />
     <Compile Include="Models\ADIN2111Model.cs" />
     <Compile Include="Models\ADINDevice.cs" />
     <Compile Include="Models\AutoNegAdvertisementBase.cs" />
@@ -77,9 +78,11 @@
     <Compile Include="Models\TestModeListingModel.cs" />
     <Compile Include="Models\TestModeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ADIN1300FirmwareAPI.cs" />
     <Compile Include="Services\ADINConfirmBoard.cs" />
     <Compile Include="Services\ADIN1100FirmwareAPI.cs" />
     <Compile Include="Services\ADIN2111FirmwareAPI.cs" />
+    <Compile Include="Services\ICableDiagnostic.cs" />
     <Compile Include="Services\IFirmwareAPI.cs" />
     <Compile Include="Services\ScriptService.cs" />
   </ItemGroup>
