ADIN1200_Implementation: - added files for Clock PIn Control using Link Properties as basis - added command file for clock pin control - added clock pin control declarations/definitions based on link properties as basis
- added command class for clock pin control and command objects for each button binding
- added options for GP clock pin controls and initial value
- added xaml file and edited for basic layout for clock pin control tab

- added method for register writes for setting GP clock pin control for ADIN1200 (empty definition for other ADIN)

- edited some format/style for layout and documentation comments for linker properties xaml file

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -132,6 +132,7 @@
     </Compile>
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\NavigateCommand.cs" />
+    <Compile Include="Commands\ClockPinControlCommand.cs" />
     <Compile Include="Components\NavigationBar.xaml.cs">
       <DependentUpon>NavigationBar.xaml</DependentUpon>
     </Compile>
@@ -147,11 +148,15 @@
     <Compile Include="Themes\ValueCellStyle.cs" />
     <Compile Include="ViewModel\DeviceListingItemViewModel.cs" />
     <Compile Include="ViewModel\DeviceListingViewModel.cs" />
+    <Compile Include="ViewModel\ClockPinControlViewModel.cs" />
     <Compile Include="ViewModel\LinkPropertiesViewModel.cs" />
     <Compile Include="ViewModel\NavigationBarViewModel.cs" />
     <Compile Include="ViewModel\OperationViewModel.cs" />
     <Compile Include="ViewModel\RegisterAccessViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="View\ClockPinControlView.xaml.cs">
+      <DependentUpon>ClockPinControlView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\LinkPropertiesView.xaml.cs">
       <DependentUpon>LinkPropertiesView.xaml</DependentUpon>
     </Compile>
@@ -203,6 +208,10 @@
     <Page Include="Themes\WhiteTheme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ClockPinControlView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\LinkPropertiesView.xaml">
       <SubType>Designer</SubType>
