--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -54,8 +54,10 @@
   <ItemGroup>
     <Compile Include="Models\ActiveLinkModel.cs" />
     <Compile Include="Models\ADIN1200Model.cs" />
+    <Compile Include="Models\ADIN1200\ClockPinControlADIN1200.cs" />
     <Compile Include="Models\ADIN1200\LinkPropertiesADIN1200.cs" />
     <Compile Include="Models\ADIN1300Model.cs" />
+    <Compile Include="Models\IClockPinControl.cs" />
     <Compile Include="Models\ILinkProperties.cs" />
     <Compile Include="Models\ADIN1300\LinkPropertiesADIN1300.cs" />
     <Compile Include="Models\ADINDevice.cs" />
@@ -68,6 +70,7 @@
     <Compile Include="Models\FrameGenCheckerModel.cs" />
     <Compile Include="Models\IADINDevice.cs" />
     <Compile Include="Models\AbstractADINFactory.cs" />
+    <Compile Include="Models\ClockPinControlModel.cs" />
     <Compile Include="Models\LinkPropertyModel.cs" />
     <Compile Include="Models\LocalRangeModel.cs" />
     <Compile Include="Models\LoopbackListingModel.cs" />
